--- a/env.yml
+++ b/env.yml
@@ -3,10 +3,12 @@ channels:
 - defaults
 - conda-forge
 dependencies:
-- python== ?????
+- python== 3.8.5
 - pandas
 - pytest
 - isort
 - pre-commit
 - flake8
 - pip
+- conda==env
+- jupyter
